--- a/graceportfolio/styles.css
+++ b/graceportfolio/styles.css
@@ -1,230 +1,286 @@
-
+@media only screen and (max-width: 768px){
+  
+  .button-link {
+    line-height: 9px;
+    background-color: rgb(175, 175, 5); /* Set your desired button color */
+    padding: 2px 2px;
+    border-radius: 60px;
+    margin-right: a
+    ;
+    width: 130px;
+    }
+    .content {
+      display: flex;
+      align-items: center; /* Vertically center content */
+      width: 100%;
+    }
+    .box-grid {
+      flex-direction: column;
+      padding: 20px 0;
+      margin-bottom: 50px;
+    }
+    
+  }
+@media only screen and (min-width: 1200px) {}
 /*for favicon*/
 .logo{
-    width: 44px;;
-    height: 32px;
-    size: 32px;
-    padding-left:105px;
+  width: 44px;;
+  height: 32px;
+  size: 32px;
+  padding-left:130px;
 }
 nav{
 display: inline;
 }
 /*seprarator*/
 .separator {
-  border-top: 1px #252527;
-  margin-top: 80px ;
+border-top: 1px #252527;
+margin-top: 80px ;
 }
 /*for Body*/
 body {
-    background-color:rgb(15, 15, 15); /* Use the desired dark color */
-    padding-top: 43px;
-    font-family: 'Manrope', sans-serif;
-    padding-right: -100px;
-    justify-content: center;
-    
+  background-color:rgb(15, 15, 15); /* Use the desired dark color */
+  padding-top: 43px;
+  font-family: 'Manrope', sans-serif;
+  padding-right: -100px;
+  justify-content: center;
+  
 }
-  /*for Navigation*/
-   nav ul {
-    list-style: none;
-    text-align: center;
-    padding-right: 90px;
-  }
-  
-nav ul li {
-    display: inline-block;
-    margin-right: 70px;
-  }
-nav ul li a{
-    display: inline;
-    margin-top: 47px;
-    width: 51px;
-    height: 25px;
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    transition: color 0.3s ease;
-      }
- nav ul li a:hover {
-     color: yellow;
-  }
-  .nav-container {
-    display: flex; /* Use flex layout */
-    align-items: center; /* Vertically align items */
-    justify-content: space-between; /* Distribute items along the main axis */
-  }
-  
-  .logo img {
-    width: 32px; /* Set the width of the icon */
-    height: auto; /* Maintain aspect ratio */
-    margin-right: 10px; /* Add spacing between icon and navigation */
-  }
-  
-  .navigation {
-    list-style: none;
-    display: flex; /* Use flex layout */
-  }
-   
-    .navigation a {
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  .navigation a:hover {
-    text-decoration: none;
-  }
-  /* Apply general styling to navigation links */
-.navigation a {
-  margin-right: 20px;
-  text-decoration: none;
-  color: white;
+/*Navigation section*/
+ nav ul {
+  list-style: none;
+  text-align: center;
+  padding-right: 70px;
+}
 
+nav ul li {
+  display: inline-block;
+  margin-right: 70px;
+}
+nav ul li a{
+  display: inline;
+  margin-top: 47px;
+  width: 51px;
+  height: 25px;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  transition: color 0.3s ease;
+    }
+nav ul li a:hover {
+   color: yellow;
+}
+.nav-container {
+  display: flex; /* Use flex layout */
+  align-items: center; /* Vertically align items */
+  justify-content: space-between; /* Distribute items along the main axis */
+}
+
+.logo img {
+  width: 32px; /* Set the width of the icon */
+  height: auto; /* Maintain aspect ratio */
+  margin-right: 10px; /* Add spacing between icon and navigation */
+}
+
+.navigation {
+  list-style: none;
+  display: flex; /* Use flex layout */
+}
+ 
+  .navigation a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.navigation a:hover {
+  text-decoration: none;
+}
+/* Apply general styling to navigation links */
+.navigation a {
+margin-right: 20px;
+text-decoration: none;
+color: white;
 }
 
 /* Style the last navigation link as a button */
 .button-link {
-  line-height: 9px;
-  background-color: rgb(175, 175, 5); /* Set your desired button color */
-  padding: 15px 30px;
-  align-content: center;
-  border: none;
-  height: 15px;
-  border-radius: 50px;
-  transition: background-color 0.3s ease; /* Add a smooth transition */
-  margin-right: 10px;
-  margin-top: -8px;
-  
-  
+line-height: 9px;
+background-color: rgb(175, 175, 5); /* Set your desired button color */
+padding: 15px 30px;
+align-content: center;
+border: none;
+height: 15px;
+border-radius: 20px;
+transition: background-color 0.3s ease; /* Add a smooth transition */
+margin-right: 10px;
+margin-top: -8px;
 }
 
 .button-link:hover {
-  background-color: black; /* Change background color on hover */
+background-color: #17181E; /* Change background color on hover */
 }
 
 /*for Content Area*/
 .content {
-    display: flex; /* Use flex layout */
-    align-items: center; /* Vertically align items */
-    padding-top: 50px;
-    padding-right: 275px;
-    padding-left: 50px;
-    justify-content: space-between; 
-    margin-right: 15px;
-
-    
-   }
-    .content img {
-    max-width: 325px; /* Set a maximum width for the image */
-    right: 100px; /* Add spacing between image and text */
-     }
-  
-  .content p {
-    flex: 1; /* Expand the paragraph to fill remaining space */
-    margin-left: 50px;
-  }
-  .head{
-    color: white;
-    font-family: 'Manrope', sans-serif;
-    font-family: 'Montserrat', sans-serif;
-    line-height: 1.75;
-  }
-  .color{
-    color: yellow;
-  }
-
-  /*About section*/
-  /* Style the "About" image */
-#about-section img {
-  width: 210px;;
-    height: 60px;
-    margin-top: 50px;
-    padding-left: 100px;
-}
-/*for content*/
-.about{
   display: flex; /* Use flex layout */
   align-items: center; /* Vertically align items */
   padding-top: 50px;
-  padding-right: 150px;
+  padding-right: 200px;
+  padding-left: 80px;
+  justify-content: space-between; 
+  margin-right: 18px;
+
+  
+ }
+  .content img {
+  max-width: 420px; /* Set a maximum width for the image */
+  right: 120px; /* Add spacing between image and text */
+   }
+
+.content p {
+  flex: 1; /* Expand the paragraph to fill remaining space */
+  margin-left: 30px;
+}
+.head{
+  color: white;
+  font-family: 'Manrope', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 1.75;
+}
+.color{
+  color: yellow;
+}
+
+/*About section*/
+/* Style the "About" image */
+#about-section img {
+width: 210px;;
+  height: 60px;
+  margin-top: 50px;
+  padding-left: 110px;
+}
+/*for content*/
+.about{
+display: flex; /* Use flex layout */
+align-items: center; /* Vertically align items */
+padding-top: 10px;
+padding-right: 70px;
 }
 .about img{
-  max-width: 400px; /* Set a maximum width for the image */
-  padding-left: 100px; /* Add spacing between image and text */
-  padding-right: 100px;
-  line-height: 1.5;
+max-width: 520px; /* Set a maximum width for the image */
+padding-left: 100px; /* Add spacing between image and text */
+padding-right: 5px;
 }
 .about-note{
-  color: white;
-  padding-right: -50px;
+color: white;
+padding-left: 200px;
 }
 .about{
-  flex: 1;
+flex: 1;
 }
 /*Workflow section*/
 #workflow-section{
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 100px;
-  width: 130px;
-  height: 50%;
+margin: auto;
+display: flex;
+justify-content: center;
+align-items: center;
+padding-top: 100px;
+width: 130px;
+height: 50%;
 }
 /*styles for workflow*/
 .product {
-  position: relative; /* Create a positioning context for the helix icon */
+position: relative; /* Create a positioning context for the helix icon */
 }
 
 
 .first{
-  position: relative;
+position: relative;
 }
 .helixleft{
-  position: absolute;
-  left: 20px;
+position: absolute;
+left: 30px;
 }
 .left{
-  position: relative;
+position: relative;
 }
 .helixright{
-  position: absolute;
-  right: 30px;
+position: absolute;
+right: 30px;
 }
 /*workflow blocks*/
 
 .box-grid {
-  display: flex;
-  padding-top: 100px;
-  justify-content: center;
-  align-items: center;
+display: flex;
+padding-top: 100px;
+justify-content: center;
+align-items: center;
+min-width: 100;
 }
 
 .box {
-  flex: 0.22; /* Distribute available space equally among boxes */
-  height: 50px;
-  background-color:#17181E;
-  color: #fff;
-  text-align: justify;
-  padding-top: 20px;
-  width: 400px;
-  height: 280px;
-  padding-left: 15px;
-  border-radius: 24px;
-  margin: 0 8px; /* Adjust the margin to reduce space between boxes */
-  z-index: 1;
+flex: 0.22; /* Distribute available space equally among boxes */
+height: 50px;
+background-color:#17181E;
+color: #fff;
+text-align: justify;
+padding-top: 20px;
+width: 400px;
+height: 280px;
+padding-left: 15px;
+border-radius: 24px;
+margin: 0 8px; /* Adjust the margin to reduce space between boxes */
+z-index: 1;
 }
 .nav-con{
-  display: flex; 
-    align-items: center; 
-    justify-content: space-between; 
-    margin-right: 30px;
+display: flex; 
+  align-items: center; 
+  justify-content: space-between; 
+  margin-right: 30px;
 }
 
-/*Section 4*/
+/*case study section*/
 #case-section{
+display: flex; /* Use flex layout */
+align-items: center; /* Vertically align items */
+padding: 50px;
+width: 200px;
+height: 50%;
+margin-left: 50px;
+padding-left: 40px;
+}
+.image-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* Two columns */
+  grid-gap: 5px; /* Gap between images */
+  margin: 30px; /* Equal margins around the grid */
+}
+
+.image {
+  padding: 10px;
+  padding-left: 50px;
+}
+
+.image img {
+  max-width: 93%;
+  height: auto;
+}
+
+/*Connect Section*/
+.connect{
+  color: white;
+  text-align: center;
+  padding: 30px;
+}
+/*Footer Section*/
+.nav-contain{
   display: flex; /* Use flex layout */
   align-items: center; /* Vertically align items */
-  padding-top: 70px;
-  width: 200px;
-  height: 50%;
-  margin-left: 90px;
+  justify-content: space-between; /* Distribute items along the main axis */
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.container1{
+  color: #fff;
+  padding-left: 85px;
 }
