--- a/graceportfolio/styles.css
+++ b/graceportfolio/styles.css
@@ -352,7 +352,11 @@ padding-left: 40px;
   opacity: 40%;
 }
 /* Media Query for Small Screens */
-@media (max-width: 768px) {
+@media (min-width: 378px) and (max-width: 768px) {
+  body {
+    font-size: 16px; /* Adjust font size for this range */
+    margin: 20px;    /* Adjust margin for this range */
+  }
   .separator {
     border-top: 1px #252527;
     margin-top: 30px;
