--- a/graceportfolio/styles.css
+++ b/graceportfolio/styles.css
@@ -4,8 +4,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 10%;
+  height: 9%;
   margin-top: 0;
+  padding-top: 10px;
   background-color: rgb(15, 15, 15);
   background-size: 30px; /* Set your header background color */
   z-index: 100; /* Make sure it's above other content */
@@ -14,7 +15,7 @@
   width: 34px;;
   height: 27px;
   size: 27px;
-  padding-left:140px;
+  padding-left:90px;
 }
 nav{
 display: inline;
@@ -76,7 +77,7 @@ nav ul li a:hover {
   display: flex; /* Use flex layout */
 }
 .nav-list li {
-  margin: 0 20px;
+  margin: 0 30px;
 }
  
   .nav-list a {
@@ -88,7 +89,7 @@ nav ul li a:hover {
   text-decoration: none;
 }
 /* Apply general styling to navigation links */
-.nav-list1 a {
+.nav-list a {
 margin-right: 20px;
 text-decoration: none;
 color: white;
@@ -98,7 +99,7 @@ color: white;
   display: flex; /* Use flex layout */
 }
 .nav-list1 li {
-  margin: 0 20px;
+  margin: 0 30px;
 }
  
   .nav-list1 a {
@@ -148,11 +149,12 @@ padding: 20px 30px;
 border: none;
 height: 10px;
 border-radius: 30px;
-transition: background-color 0.3s ease; /* Add a smooth transition *
+transition: background-color 0.3s ease; /* Add a smooth transition */
 }
 
 .button-link:hover {
 background-color: #17181E; /* Change background color on hover */
+color: gold;
 }
 
 /*for Content Area*/
@@ -160,20 +162,20 @@ background-color: #17181E; /* Change background color on hover */
   display: flex; /* Use flex layout */
   align-items: center; /* Vertically align items */
   padding-top: 50px;
-  padding-right: 200px;
-  padding-left: 100px;
-  justify-content: space-between; 
-  margin-right: 18px;  
+  margin-left: -140px;
  }
   .content img {
   max-width: 400px; /* Set a maximum width for the image */
-  right: 120px; /* Add spacing between image and text */
+  right: auto; /* Add spacing between image and text */
   float: right;
+  margin-right: 100px;
+ 
    }
 
 .content p {
   flex: 1; /* Expand the paragraph to fill remaining space */
-  margin-left: 30px;
+  margin-left: 0px;
+  padding-left: 50px;
 }
 .head{
   color: white;
@@ -191,7 +193,7 @@ background-color: #17181E; /* Change background color on hover */
 width: 210px;;
   height: 60px;
   margin-top: 60px;
-  padding-left: 110px;
+  padding-left: 78px;
 }
 /*for content*/
 .about{
@@ -219,8 +221,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 padding-top: 5px;
-width: 130px;
-height: 50%;
+width: 100px;
 }
 /*styles for workflow*/
 .product {
@@ -278,8 +279,7 @@ display: flex;
 display: flex; /* Use flex layout */
 align-items: center; /* Vertically align items */
 padding: 50px;
-width: 200px;
-height: 50%;
+width: 100px;
 margin-left: 50px;
 margin-top: 30px;
 padding-left: 40px;
@@ -357,6 +357,7 @@ padding-left: 40px;
     font-size: 16px; /* Adjust font size for this range */
     margin: 20px;    /* Adjust margin for this range */
   }
+
   .separator {
     border-top: 1px #252527;
     margin-top: 30px;
@@ -365,10 +366,11 @@ padding-left: 40px;
     width: 30px;;
     height: 20px;
     size: 20px;
-    padding-left:5px;
+    padding-left:30px;
   }
   .menu-icon {
     display: block;
+    margin-right: 30px;
   }
   .close-icon {
     display:none;
@@ -421,14 +423,14 @@ padding-left: 40px;
   .button-link {
     display: inline-block;
     margin: 20px 20px 20px 0 ; 
-    width: 220px;
+    width: 206px;
     /* float: left;*/
     height: 50px;
     }
     .button-link a {
       text-align: center;
-      padding: 10px;
-      font-size: 1.5em;
+      padding-left: 15px;
+      font-size: 1.4em;
     }
     .nav-list.active {
       display: flex;
@@ -440,20 +442,20 @@ padding-left: 40px;
     .content {
       display: block; /* Use flex layout */
       align-items: center; /* Vertically align items */
-      padding-top: 10px;
-      padding-right: 0;
-      padding-left: 5px;
-      margin-right: 0;  
-      font-size: 15px;
+      padding-top: 30px;
+      margin-left: 10px;
+      font-size: 13px;
      }
       .content img {
       display: none;
        }
        #about-section img {
-        width: 190px;;
+        width: 170px;;
           height: 50px;
           margin-top: 35px;
-          padding-left: 5px;
+          padding-left: 0px;
+          margin-left: 10px;
+          padding-right: 30px;
         }
        .about{
         display: block;
@@ -476,10 +478,12 @@ padding-left: 40px;
           padding-left: 400px;
           opacity: 40%;
         }
-        #workflow-section{
-          padding-top: 10px;
-          height: 5px;
+        #workflow-section img{
+          width: 251px;;
+          height: 55px;
           padding-left: 30px;
+          margin-left: 20px;
+          padding-right: 30px
           }
           /*styles for workflow*/
           .product {
@@ -511,21 +515,18 @@ padding-left: 40px;
         .text{
           font-size: 18px;
         }
-        #case-section{
-          display: block; /* Use flex layout */
-          padding: 0;
-          width: 150px;
-          height: 10px;
-          margin-left: 60px;
-          margin-top: 50px;
-          margin-bottom: 10px;
-          }
+        #case-section img{
+            width: 250px;;
+              height: 50px;
+              margin-left: -75px;
+            }
           .image-grid {
             display: block;
             grid-template-columns: repeat(2, 1fr); /* Two columns */
             grid-gap: 5px; /* Gap between images */
-            margin: 30px 0px 0px 0px;
-          width: 100%;
+            margin-left: 20px;
+          width: 90%;
+          margin-top: 10px;
           }
           
           .image {
@@ -551,6 +552,14 @@ padding-left: 40px;
             margin-top: 20px;
             margin-bottom: 0;
           }
+          .connect{
+            font-size: 12.5px;
+            padding: 30px;
+            
+          }
+          .gmail{
+            color: white;
+          }
           .nav-contain{
             display: flex; /* Use flex layout */
             align-items: center; /* Vertically align items */
@@ -563,12 +572,12 @@ padding-left: 40px;
         }
         .container1{
         text-align: center;
-        margin-right: 50px;
-        font-size: 15px;
+        margin-right: 70px;
+        font-size: 11px;
         }
         .nav-list1{
           display: block;
-          margin-left: 60px;
+          margin-left:25px;
         }
 }
 /* Media Query for Small Screens */
